@@ -34,17 +34,21 @@
 #import "ccMacros.h"
 #import "ccConfig.h"
 #import "Support/OpenGL_Internal.h"
+#import "cocos2d.h"
+
+@interface CCConfiguration ()
+-(void) getOpenGLvariables;
+@end
 
 @implementation CCConfiguration
 
-@synthesize maxTextureSize = maxTextureSize_, maxTextureUnits=maxTextureUnits_;
-@synthesize supportsPVRTC = supportsPVRTC_;
-@synthesize maxModelviewStackDepth = maxModelviewStackDepth_;
-@synthesize supportsNPOT = supportsNPOT_;
-@synthesize supportsBGRA8888 = supportsBGRA8888_;
-@synthesize supportsDiscardFramebuffer = supportsDiscardFramebuffer_;
-@synthesize supportsShareableVAO = supportsShareableVAO_;
-@synthesize OSVersion = OSVersion_;
+@synthesize maxTextureSize = _maxTextureSize, maxTextureUnits=_maxTextureUnits;
+@synthesize supportsPVRTC = _supportsPVRTC;
+@synthesize supportsNPOT = _supportsNPOT;
+@synthesize supportsBGRA8888 = _supportsBGRA8888;
+@synthesize supportsDiscardFramebuffer = _supportsDiscardFramebuffer;
+@synthesize supportsShareableVAO = _supportsShareableVAO;
+@synthesize OSVersion = _OSVersion;
 
 //
 // singleton stuff
@@ -86,7 +90,7 @@ static char * glExtensions;
 	if( (self=[super init])) {
 
 		// Obtain iOS version
-		OSVersion_ = 0;
+		_OSVersion = 0;
 #ifdef __CC_PLATFORM_IOS
 		NSString *OSVer = [[UIDevice currentDevice] systemVersion];
 #elif defined(__CC_PLATFORM_MAC)
@@ -96,81 +100,9 @@ static char * glExtensions;
 		int idx = 0x01000000;
 		for( NSString *str in arr ) {
 			int value = [str intValue];
-			OSVersion_ += value * idx;
+			_OSVersion += value * idx;
 			idx = idx >> 8;
 		}
-		CCLOG(@"cocos2d: OS version: %@ (0x%08x)", OSVer, OSVersion_);
-
-		CCLOG(@"cocos2d: GL_VENDOR:   %s", glGetString(GL_VENDOR) );
-		CCLOG(@"cocos2d: GL_RENDERER: %s", glGetString ( GL_RENDERER   ) );
-		CCLOG(@"cocos2d: GL_VERSION:  %s", glGetString ( GL_VERSION    ) );
-
-		glExtensions = (char*) glGetString(GL_EXTENSIONS);
-
-		glGetIntegerv(GL_MAX_TEXTURE_SIZE, &maxTextureSize_);
-		glGetIntegerv(GL_MAX_COMBINED_TEXTURE_IMAGE_UNITS, &maxTextureUnits_ );
-
-#ifdef __CC_PLATFORM_IOS
-		if( OSVersion_ >= kCCiOSVersion_4_0 )
-			glGetIntegerv(GL_MAX_SAMPLES_APPLE, &maxSamplesAllowed_);
-		else
-			maxSamplesAllowed_ = 0;
-#elif defined(__CC_PLATFORM_MAC)
-		glGetIntegerv(GL_MAX_SAMPLES, &maxSamplesAllowed_);
-#endif
-
-		supportsPVRTC_ = [self checkForGLExtension:@"GL_IMG_texture_compression_pvrtc"];
-#ifdef __CC_PLATFORM_IOS
-		supportsNPOT_ = YES;
-#elif defined(__CC_PLATFORM_MAC)
-		supportsNPOT_ = [self checkForGLExtension:@"GL_ARB_texture_non_power_of_two"];
-#endif
-		// It seems that somewhere between firmware iOS 3.0 and 4.2 Apple renamed
-		// GL_IMG_... to GL_APPLE.... So we should check both names
-
-#ifdef __CC_PLATFORM_IOS
-		BOOL bgra8a = [self checkForGLExtension:@"GL_IMG_texture_format_BGRA8888"];
-		BOOL bgra8b = [self checkForGLExtension:@"GL_APPLE_texture_format_BGRA8888"];
-		supportsBGRA8888_ = bgra8a | bgra8b;
-#elif defined(__CC_PLATFORM_MAC)
-		supportsBGRA8888_ = [self checkForGLExtension:@"GL_EXT_bgra"];
-#endif
-
-		supportsShareableVAO_ = [self checkForGLExtension:@"GL_APPLE_vertex_array_object"];
-
-		
-		supportsDiscardFramebuffer_ = [self checkForGLExtension:@"GL_EXT_discard_framebuffer"];
-
-		CCLOG(@"cocos2d: GL_MAX_TEXTURE_SIZE: %d", maxTextureSize_);
-		CCLOG(@"cocos2d: GL_MAX_TEXTURE_UNITS: %d", maxTextureUnits_);
-		CCLOG(@"cocos2d: GL_MAX_SAMPLES: %d", maxSamplesAllowed_);
-		CCLOG(@"cocos2d: GL supports PVRTC: %s", (supportsPVRTC_ ? "YES" : "NO") );
-		CCLOG(@"cocos2d: GL supports BGRA8888 textures: %s", (supportsBGRA8888_ ? "YES" : "NO") );
-		CCLOG(@"cocos2d: GL supports NPOT textures: %s", (supportsNPOT_ ? "YES" : "NO") );
-		CCLOG(@"cocos2d: GL supports discard_framebuffer: %s", (supportsDiscardFramebuffer_ ? "YES" : "NO") );
-		CCLOG(@"cocos2d: GL supports shareable VAO: %s", (supportsShareableVAO_ ? "YES" : "NO") );
-
-#ifdef __CC_PLATFORM_MAC
-		CCLOG(@"cocos2d: Director's thread: %@",
-#if (CC_DIRECTOR_MAC_THREAD == CC_MAC_USE_MAIN_THREAD)
-			  @"Main thread"
-#elif (CC_DIRECTOR_MAC_THREAD == CC_MAC_USE_OWN_THREAD)
-			  @"Own thread"	
-#elif (CC_DIRECTOR_MAC_THREAD == CC_MAC_USE_DISPLAY_LINK_THREAD)
-			  @"DisplayLink thread"
-#endif //
-			  );
-#endif // Mac
-
-		CCLOG(@"cocos2d: compiled with Profiling Support: %s",
-#if CC_ENABLE_PROFILERS
-
-			  "YES - *** Disable it when you finish profiling ***"
-#else
-			  "NO"
-#endif
-			  );
-
 	}
 
 #if CC_ENABLE_GL_STATE_CACHE == 0
@@ -223,5 +155,161 @@ static char * glExtensions;
 #endif // __CC_PLATFORM_MAC
 	
 	return ret;
+}
+
+#pragma mark OpenGL getters
+
+/** OpenGL Max texture size. */
+
+-(void) getOpenGLvariables
+{
+	if( ! _openGLInitialized ) {
+
+		glExtensions = (char*) glGetString(GL_EXTENSIONS);
+
+		NSAssert( glExtensions, @"OpenGL not initialized!");
+
+#ifdef __CC_PLATFORM_IOS
+		if( _OSVersion >= kCCiOSVersion_4_0 )
+			glGetIntegerv(GL_MAX_SAMPLES_APPLE, &_maxSamplesAllowed);
+		else
+			_maxSamplesAllowed = 0;
+#elif defined(__CC_PLATFORM_MAC)
+		glGetIntegerv(GL_MAX_SAMPLES, &_maxSamplesAllowed);
+#endif
+
+		glGetIntegerv(GL_MAX_TEXTURE_SIZE, &_maxTextureSize);
+		glGetIntegerv(GL_MAX_COMBINED_TEXTURE_IMAGE_UNITS, &_maxTextureUnits );
+
+#ifdef __CC_PLATFORM_IOS
+		_supportsNPOT = YES;
+#elif defined(__CC_PLATFORM_MAC)
+		_supportsNPOT = [self checkForGLExtension:@"GL_ARB_texture_non_power_of_two"];
+#endif
+
+		_supportsPVRTC = [self checkForGLExtension:@"GL_IMG_texture_compression_pvrtc"];
+
+		// It seems that somewhere between firmware iOS 3.0 and 4.2 Apple renamed
+		// GL_IMG_... to GL_APPLE.... So we should check both names
+#ifdef __CC_PLATFORM_IOS
+		BOOL bgra8a = [self checkForGLExtension:@"GL_IMG_texture_format_BGRA8888"];
+		BOOL bgra8b = [self checkForGLExtension:@"GL_APPLE_texture_format_BGRA8888"];
+		_supportsBGRA8888 = bgra8a | bgra8b;
+#elif defined(__CC_PLATFORM_MAC)
+		_supportsBGRA8888 = [self checkForGLExtension:@"GL_EXT_bgra"];
+#endif
+		_supportsDiscardFramebuffer = [self checkForGLExtension:@"GL_EXT_discard_framebuffer"];
+
+		_supportsShareableVAO = [self checkForGLExtension:@"GL_APPLE_vertex_array_object"];
+		
+		_openGLInitialized = YES;
+	}
+}
+
+-(GLint) maxTextureSize
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+	return _maxTextureSize;
+}
+
+-(GLint) maxTextureUnits
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+
+	return _maxTextureUnits;
+}
+
+-(BOOL) supportsNPOT
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+
+	return _supportsNPOT;
+}
+
+-(BOOL) supportsPVRTC
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+
+	return _supportsPVRTC;
+}
+
+-(BOOL) supportsBGRA8888
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+
+	return _supportsBGRA8888;
+}
+
+-(BOOL) supportsDiscardFramebuffer
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+
+	return _supportsDiscardFramebuffer;
+}
+
+-(BOOL) supportsShareableVAO
+{
+	if( ! _openGLInitialized )
+		[self getOpenGLvariables];
+
+	return _supportsShareableVAO;
+}
+
+
+#pragma mark Helper
+
+-(void) dumpInfo
+{
+#if DEBUG
+	printf("cocos2d: %s\n", cocos2d_version );
+
+#ifdef __CC_PLATFORM_IOS
+	NSString *OSVer = [[UIDevice currentDevice] systemVersion];
+#elif defined(__CC_PLATFORM_MAC)
+	NSString *OSVer = [self getMacVersion];
+#endif
+
+#ifdef __CC_PLATFORM_MAC
+	printf("cocos2d: Director's thread: %s\n",
+#if (CC_DIRECTOR_MAC_THREAD == CC_MAC_USE_MAIN_THREAD)
+		  "Main thread"
+#elif (CC_DIRECTOR_MAC_THREAD == CC_MAC_USE_OWN_THREAD)
+		  "Own thread"
+#elif (CC_DIRECTOR_MAC_THREAD == CC_MAC_USE_DISPLAY_LINK_THREAD)
+		  "DisplayLink thread"
+#endif //
+		  );
+#endif // Mac
+	
+	printf("cocos2d: compiled with Profiling Support: %s\n",
+#if CC_ENABLE_PROFILERS
+		  "YES - *** Disable it when you finish profiling ***"
+#else
+		  "NO"
+#endif
+		  );
+
+	printf("cocos2d: OS version: %s (0x%08x)\n", [OSVer UTF8String], _OSVersion);
+	
+	printf("cocos2d: GL_VENDOR:   %s\n", glGetString(GL_VENDOR) );
+	printf("cocos2d: GL_RENDERER: %s\n", glGetString ( GL_RENDERER   ) );
+	printf("cocos2d: GL_VERSION:  %s\n", glGetString ( GL_VERSION    ) );
+	
+	printf("cocos2d: GL_MAX_TEXTURE_SIZE: %d\n", _maxTextureSize);
+	printf("cocos2d: GL_MAX_TEXTURE_UNITS: %d\n", _maxTextureUnits);
+	printf("cocos2d: GL_MAX_SAMPLES: %d\n", _maxSamplesAllowed);
+	printf("cocos2d: GL supports PVRTC: %s\n", (_supportsPVRTC ? "YES" : "NO") );
+	printf("cocos2d: GL supports BGRA8888 textures: %s\n", (_supportsBGRA8888 ? "YES" : "NO") );
+	printf("cocos2d: GL supports NPOT textures: %s\n", (_supportsNPOT ? "YES" : "NO") );
+	printf("cocos2d: GL supports discard_framebuffer: %s\n", (_supportsDiscardFramebuffer ? "YES" : "NO") );
+	printf("cocos2d: GL supports shareable VAO: %s\n", (_supportsShareableVAO ? "YES" : "NO") );
+	
+#endif // DEBUG
 }
 @end
